Fix popup journal spacing

--- a/src/modules/better-journal/styles/styles.css
+++ b/src/modules/better-journal/styles/styles.css
@@ -223,3 +223,7 @@ a.journal-detailLink.full::after {
 .journal .entry.gloomyGreenwood-incense {
   background-color: #ffc277;
 }
+
+.jsingle .journalEntries {
+  padding-top: 1px;
+}
